--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,9 +8,23 @@
 
 </head>
 <body>
-<img src="img/person1.jpg">
 <div class="container">
     <header id="main-header">
+        <div class="col-lg-8 col-md-5">
+            <img src="img/person1.jpg" alt="Jhon Doe">
+        </div>
+        <div class="name-bar col-lg-8 col-md-7">
+            <div class="d-flex flex-column">
+                <div class="p-5 bg-dark text-white">
+                    <div class="d-flex flex-row justify-content-between align-items-center">
+                        <h1 class="display-4">Jhon Doe</h1>
+
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
 
     </header>
 
