--- a/menu/index.html
+++ b/menu/index.html
@@ -3,8 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-
+    <div class="container">
+        <div class="left"><h1 class="text">Show me</h1></div>
+        <div class="right"><h1 class="name">Right minded</h1></div>
+    </div>
+    <div class="container-fluid">
+        <div class="navbar-header"><a href="https://tkhk.siseveeb.ee" class="navbar-brand" rel="tooltip" title="Avaleht">Tartu Kutsehariduskeskus</a>
+        </div>
+    </div></nav><div id="main_container" class="container-fluid"><div class="row"><div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 fluid-print"><div class="main"><div id="program_content_div" class="clear"><div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+            <div id="P"><div class="panel panel-default">
+                <div class="panel-heading text-center"><h3><strong>PRAED</strong></h3></div><ul class="diner-section-ul list-group"><li class="list-group-item" ><h2>Guljašš<span class="label label-info pull-right">2,70€</span><br/><small>sealiha kastmes, lisand, salat, leib</small><div class="clearfix"></div></h2></li><li class="list-group-item" ><h2>Praetud kala<span class="label label-info pull-right">2,70€</span><br/><small>Kala.lisand,kaste,ksalat,leib</small><div class="clearfix"></div></h2></li><li class="list-group-item" ><h2>Guljašš 1/2<span class="label label-info pull-right">1,45€</span><br/><small>sealiha kastmes, lisand, salat, leib</small><div class="clearfix"></div></h2></li><li class="list-group-item" ><h2>Kartul, kaste, salat, leib<span class="label label-info pull-right">1,38€</span><div class="clearfix"></div></h2></li></ul></div></div>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+            <div id="S"><div class="panel panel-default">
+                <div class="panel-heading text-center"><h3><strong>SUPID</strong></h3></div><ul class="diner-section-ul list-group"><li class="list-group-item" ><h2>Kana-riisisupp<span class="label label-info pull-right">1,10€</span><br/><small>supp, leib</small><div class="clearfix"></div></h2></li></ul></div></div>
+            <div id="M"><div class="panel panel-default">
+                <div class="panel-heading text-center"><h3><strong>MAGUSTOIDUD</strong></h3></div><ul class="diner-section-ul list-group"><li class="list-group-item" ><h2>Kohupiimavorm kisselliga<span class="label label-info pull-right">1,10€</span><div class="clearfix"></div></h2></li></ul></div></div>
+            <div id="J"><div class="panel panel-default">
+                <div class="panel-heading text-center"><h3><strong>JOOGID</strong></h3></div><div class="container-fluid"><div class="row"><ul class="diner-section-ul col-lg-6 col-md-6 col-sm-6 list-group"><li class="list-group-item" ><h2>Mahl<span class="label label-info pull-right">0,60€</span><div class="clearfix"></div></h2></li><li class="list-group-item" ><h2>Piim<span class="label label-info pull-right">0,30€</span><div class="clearfix"></div></h2></li><li class="list-group-item" ><h2>Koolipiim<span class="label label-info pull-right">0,20€</span><div class="clearfix"></div></h2></li></ul><ul class="diner-section-ul col-lg-6 col-md-6 col-sm-6 list-group"><li class="list-group-item" ><h2>Keefir<span class="label label-info pull-right">0,39€</span><div class="clearfix"></div></h2></li><li class="list-group-item" ><h2>Morss<span class="label label-info pull-right">0,25€</span><div class="clearfix"></div></h2></li></ul></div></div></div></div>
+        </div>
+    </div>
+    </div>
+    </div>
 </body>
 </html>
