Kolm osa akordionist on valmis

--- a/menu/index.html
+++ b/menu/index.html
@@ -14,18 +14,46 @@
             <div class="card-header">
                 <a href="#collapseOne" data-toggle="collapse" class="card-link">Praed</a>
             </div>
-            <div id="collapseOne" class="collapse show" data-parent="#accordion">
+            <div id="collapseOne" class="collapse show">
                 <div class="card-body">
-                    <ul>
-                        <li class="praad1">Praad 1</li>
-                        <li class="praad2">Praad 2</li>
-                        <li class="praad3">Praad 3</li>
-                        <li class="praad4">Praad 4</li>
+                    <ul class="list-group">
+                        <li id="praad1" class="list-group-item">Praad 1</li>
+                        <li id="praad2" class="list-group-item">Praad 2</li>
+                        <li id="praad3" class="list-group-item">Praad 3</li>
+                        <li id="praad4" class="list-group-item">Praad 4</li>
                     </ul>
-
                 </div>
             </div>
         </div>
+        <div class="card">
+            <div class="card-header">
+                <a href="#collapseTwo" data-toggle="collapse" class="card-link">Supid</a>
+            </div>
+            <div id="collapseTwo" class="collapse show">
+                <div class="card-body">
+                    <ul class="list-group">
+                        <li id="supp1" class="list-group-item">Supp 1</li>
+                        <li id="supp2" class="list-group-item">Supp 2</li>
+                        <li id="supp3" class="list-group-item">Supp 3</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header">
+                <a href="#collapseThree" data-toggle="collapse" class="card-link">Magustoit</a>
+            </div>
+            <div id="collapseThree" class="collapse show">
+                <div class="card-body">
+                    <ul class="list-group">
+                        <li id="praad1" class="list-group-item">Magus 1</li>
+                        <li id="praad2" class="list-group-item">Magus 2</li>
+                        <li id="praad3" class="list-group-item">Magus 3</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
 
 
     </div>
