--- a/menu/index.html
+++ b/menu/index.html
@@ -46,9 +46,25 @@
             <div id="collapseThree" class="collapse show">
                 <div class="card-body">
                     <ul class="list-group">
-                        <li id="praad1" class="list-group-item">Magus 1</li>
-                        <li id="praad2" class="list-group-item">Magus 2</li>
-                        <li id="praad3" class="list-group-item">Magus 3</li>
+                        <li id="magus 1" class="list-group-item">Magus 1</li>
+                        <li id="magus 2" class="list-group-item">Magus 2</li>
+                        <li id="magus 3" class="list-group-item">Magus 3</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header">
+                <a href="#collapseFour" data-toggle="collapse" class="card-link">Joogid</a>
+            </div>
+            <div id="collapseFour" class="collapse show">
+                <div class="card-body">
+                    <ul class="list-group">
+                        <li id="jook1" class="list-group-item">Jook 1</li>
+                        <li id="jook2" class="list-group-item">Jook 2</li>
+                        <li id="jook3" class="list-group-item">Jook 3</li>
+                        <li id="jook4" class="list-group-item">Jook 4</li>
+                        <li id="jook5" class="list-group-item">Jook 5</li>
                     </ul>
                 </div>
             </div>
