--- a/menu/index.html
+++ b/menu/index.html
@@ -15,9 +15,9 @@
                 <a href="#collapseOne" data-toggle="collapse" class="card-link">Praed</a>
             </div>
             <div id="collapseOne" class="collapse show">
-                <div class="card-body">
-                    <ul class="list-group">
-                        <li id="praad1" class="list-group-item">Praad 1</li>
+                <div class="card-body clearfix">
+                    <ul class="panel-heading text-center list-group">
+                        <li id="praad1" class="list-group-item">Praad 1<span class="float-right">Hind</span><br><p>Millest toit koosneb</p></li>
                         <li id="praad2" class="list-group-item">Praad 2</li>
                         <li id="praad3" class="list-group-item">Praad 3</li>
                         <li id="praad4" class="list-group-item">Praad 4</li>
@@ -31,7 +31,7 @@
             </div>
             <div id="collapseTwo" class="collapse show">
                 <div class="card-body">
-                    <ul class="list-group">
+                    <ul class="panel-heading text-center list-group">
                         <li id="supp1" class="list-group-item">Supp 1</li>
                         <li id="supp2" class="list-group-item">Supp 2</li>
                         <li id="supp3" class="list-group-item">Supp 3</li>
@@ -45,7 +45,7 @@
             </div>
             <div id="collapseThree" class="collapse show">
                 <div class="card-body">
-                    <ul class="list-group">
+                    <ul class="panel-heading text-center list-group">
                         <li id="magus 1" class="list-group-item">Magus 1</li>
                         <li id="magus 2" class="list-group-item">Magus 2</li>
                         <li id="magus 3" class="list-group-item">Magus 3</li>
@@ -59,7 +59,7 @@
             </div>
             <div id="collapseFour" class="collapse show">
                 <div class="card-body">
-                    <ul class="list-group">
+                    <ul class="panel-heading text-center list-group">
                         <li id="jook1" class="list-group-item">Jook 1</li>
                         <li id="jook2" class="list-group-item">Jook 2</li>
                         <li id="jook3" class="list-group-item">Jook 3</li>
