--- a/menu/index.html
+++ b/menu/index.html
@@ -15,12 +15,13 @@
                 <a href="#collapseOne" data-toggle="collapse" class="card-link">Praed</a>
             </div>
             <div id="collapseOne" class="collapse show">
-                <div class="card-body clearfix">
+                <div class="card-body">
                     <ul class="panel-heading text-center list-group">
-                        <li id="praad1" class="list-group-item">Praad 1<span class="float-right">Hind</span><br><p>Millest toit koosneb</p></li>
-                        <li id="praad2" class="list-group-item">Praad 2</li>
-                        <li id="praad3" class="list-group-item">Praad 3</li>
-                        <li id="praad4" class="list-group-item">Praad 4</li>
+                        <li id="praad1" class="list-group-item">Praad 1 <span class="hind bg-success badge ">Hind</span><span class="hind badge">Hind</span><br><p>Millest toit koosneb</p></li>
+
+                        <li id="praad2" class="list-group-item">Praad 2 <span class="hind bg-success badge ">Hind</span><span class="hind badge">Hind</span></li>
+                        <li id="praad3" class="list-group-item">Praad 3 <span class="hind bg-success badge ">Hind</span><span class="hind badge">Hind</span></li>
+                        <li id="praad4" class="list-group-item">Praad 4 <span class="hind bg-success badge ">Hind</span><span class="hind badge">Hind</span></li>
                     </ul>
                 </div>
             </div>
@@ -32,23 +33,24 @@
             <div id="collapseTwo" class="collapse show">
                 <div class="card-body">
                     <ul class="panel-heading text-center list-group">
-                        <li id="supp1" class="list-group-item">Supp 1</li>
-                        <li id="supp2" class="list-group-item">Supp 2</li>
-                        <li id="supp3" class="list-group-item">Supp 3</li>
+                        <li id="supp1" class="list-group-item">Supp 1<span class="hind bg-success badge ">Hind</span><span class="hind badge">Hind</span></li>
+                        <li id="supp2" class="list-group-item">Supp 2<span class="hind bg-success badge ">Hind</span><span class="hind badge">Hind</span></li>
+                        <li id="supp3" class="list-group-item">Supp 3<span class="hind bg-success badge ">Hind</span><span class="hind badge">Hind</span></li>
                     </ul>
                 </div>
             </div>
         </div>
         <div class="card">
             <div class="card-header">
+
                 <a href="#collapseThree" data-toggle="collapse" class="card-link">Magustoit</a>
             </div>
             <div id="collapseThree" class="collapse show">
                 <div class="card-body">
                     <ul class="panel-heading text-center list-group">
-                        <li id="magus 1" class="list-group-item">Magus 1</li>
-                        <li id="magus 2" class="list-group-item">Magus 2</li>
-                        <li id="magus 3" class="list-group-item">Magus 3</li>
+                        <li id="magus 1" class="list-group-item">Magus 1<span class="hind bg-success badge ">Hind</span><span class="hind badge">Hind</span></li>
+                        <li id="magus 2" class="list-group-item">Magus 2<span class="hind bg-success badge ">Hind</span><span class="hind badge">Hind</span></li>
+                        <li id="magus 3" class="list-group-item">Magus 3<span class="hind bg-success badge ">Hind</span><span class="hind badge">Hind</span></li>
                     </ul>
                 </div>
             </div>
@@ -60,11 +62,11 @@
             <div id="collapseFour" class="collapse show">
                 <div class="card-body">
                     <ul class="panel-heading text-center list-group">
-                        <li id="jook1" class="list-group-item">Jook 1</li>
-                        <li id="jook2" class="list-group-item">Jook 2</li>
-                        <li id="jook3" class="list-group-item">Jook 3</li>
-                        <li id="jook4" class="list-group-item">Jook 4</li>
-                        <li id="jook5" class="list-group-item">Jook 5</li>
+                        <li id="jook1" class="list-group-item">Jook 1<span class="hind badge">Hind</span></li>
+                        <li id="jook2" class="list-group-item">Jook 2<span class="hind badge">Hind</span></li>
+                        <li id="jook3" class="list-group-item">Jook 3<span class="hind badge">Hind</span></li>
+                        <li id="jook4" class="list-group-item">Jook 4<span class="hind badge">Hind</span></li>
+                        <li id="jook5" class="list-group-item">Jook 5<span class="hind badge">Hind</span></li>
                     </ul>
                 </div>
             </div>
